--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -24,8 +24,9 @@
     display: block;
     width: 100%;
     text-align: center;
+    padding: 2rem 0;
     color: #999;
-    font-size: 10rem;
+    font-size: 8rem;
   }
 
   .item_content .item {
@@ -36,7 +37,7 @@
     position: relative;
     border-top: 1px dashed #333;
     bottom: 0;
-    line-height: 25px;
+    line-height: 1.6rem;
     padding: 10px;
   }
 
@@ -46,20 +47,22 @@
 
   .item_content .item .title {
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.8rem;
   }
   .item_content .item .text {
-    font-size: 14px;
+    font-size: 1.4rem;
   }
 
   @media only screen and (max-width: 476px) {
+    html{
+      font-size: 4px;
+    }
   }
 
   @media only screen and (min-width: 769px) {
     .item_content ul li {
       width: 23%;
     }
-
     .item_content {
       margin: 13% auto;
     }
