--- a/app/views/overview.html
+++ b/app/views/overview.html
@@ -38,7 +38,7 @@
     border-top: 1px dashed #333;
     bottom: 0;
     line-height: 1.6rem;
-    padding: 10px;
+    padding: 1rem 0;
   }
 
   .item_content .item a {
@@ -56,6 +56,9 @@
   @media only screen and (max-width: 476px) {
     html{
       font-size: 4px;
+    }
+    .item_content .item .text {
+      display: none;
     }
   }
 
